tests/script_errors/error_in_include/error.txt
Error: 
    2 |   snot::badger::boo
      |   ^^^^^^^^^^^^^^^^^ The constant snot::badger::boo (absolute path) is not defined.